replaced 100vw with 100%to fix site-wide scrollbar

--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     background-color: rgb(112,128,144);
     border: .01vw solid #ddd;
-    width: 100vw;
+    width: 100%;
     height: 4vw;
 }
 .other{
